components/external-secrets/onepassword-connect/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword-connect
  labels:
    app.kubernetes.io/instance: onepassword-connect
    app.kubernetes.io/name: onepassword-connect
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE}
      sectionName: https
  hostnames: ["onepassword-connect.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: onepassword-connect
          port: 8080
